--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,11 @@ a {
     text-decoration: none;
 }
 
+.wrapper {
+    width: 76%;
+    margin: 0 auto;
+}
+
 /*li{
     list-style: none;
 }*/
@@ -27,12 +32,13 @@ header {
     font-weight: 800;
     font-size: 24px;
     cursor: pointer;
-    margin-top: 56px;
+    margin-top: 53px;
+    margin-bottom: 3px;
     margin-left: 12%;
 }
 
 nav {
-    margin-top: 56px;
+    margin-top: 53px;
     margin-left: 29%;
 }
 
@@ -58,38 +64,41 @@ main {
     width: 100%;
 }
 
-main .main__welcome {
+.main__welcome {
     background: #000;
     text-align: center;
     padding: 200px 0px 410px 0px;
 }
 
-main .main__welcome h1 {
+.main__welcome h1 {
     color: #999999;
     font-size: 44px;
 }
 
+.main__welcome h1::after{
+    display: none;
+}
 .mycompany {
     color: #fcac45;
 }
 
-main .main__welcome p {
+.main__welcome p {
     color: #999999;
     font-size: 20px;
 }
 
-.wrapper {
-    width: 76%;
-    margin: 0 auto;
-}
 
-main .main__about {
+.about{
     display: flex;
     padding: 100px 0 100px 0;
 }
 
 .about__left img {
     width: 500px;
+}
+
+.mw-100 {
+    min-width: 100%;
 }
 
 .about__right {
@@ -100,6 +109,10 @@ main .main__about {
     display: inline-block;
     border-bottom: 3px solid #fcac45;
     padding-bottom: 20px;
+}
+
+.about__right h1::after{
+    display: none;
 }
 
 .about__right p {
@@ -117,9 +130,6 @@ main .main__about {
     margin-top: 10px;
 }
 
-.mw-100 {
-    min-width: 100%;
-}
 
 .main__team {
     background: #000;
@@ -134,16 +144,16 @@ main .main__about {
     padding-bottom: 30px;
 }
 
-.line {
+/* .line {
     width: 100px;
     height: 3px;
     background: #fcac45;
     position: relative;
     left: 45.5%;
     margin-bottom: 85px;
-}
+} */
 
-.photo {
+.card img {
     background: #d7d7d7;
     width: 125px;
     height: 125px;
@@ -285,6 +295,103 @@ main .main__about {
     text-transform: uppercase;
 }
 
+.contact__form{
+    padding: 100px 0 100px 0;
+}
+
+.contact__form h1,p{
+    text-align: center;
+}
+
+.contact__form h1{
+    color: #000;
+    margin-bottom: 30px;
+}
+
+.contact__wrapper {
+    width: 753px;
+    margin: 0 auto;
+    color: #636363;
+}
+
+.red {color: red;}
+
+.form__inputs {
+    width: 100%;
+    margin-top: 100px;
+    display: flex;
+}
+
+form p{
+    text-align: left;
+}
+
+input {
+    width: 360px;
+    height: 40px;
+    font-size: 20px;
+    margin-bottom: 30px;
+
+}
+
+input:first-of-type{
+    margin-right: 23px;
+}
+
+textarea {
+    width: 100%;
+    height: 163px;
+}
+
+input, textarea{
+    border: 1px solid #999999;
+    margin-top: 5px;
+}
+
+.button__block{
+    display: flex;
+    justify-content: flex-end;
+}
+
+input[type=submit] {
+    width: 165px;
+    height: 40px;
+    background-color: #fcac45;
+    color: #fff;
+    margin-right: 0;
+    margin-top: 20px;
+}
+
+h1::after{
+    content: "";
+    display: block;
+    margin:0 auto;
+    width: 100px;
+    padding-top: 20px;
+    border-bottom: 3px solid #fcac45;
+}
+
+footer{
+    width: 100%;
+    height: auto;
+    background-color: #000;
+    padding: 30px 0 30px 0;
+}
+.social{
+    display: flex;
+    justify-content: center;
+
+}
+
+.social img{
+    margin-left: 12px;
+
+}
+
+.social img:hover{
+    opacity: 0.6;
+}
+
 @media screen and (max-width: 1613px) {
     .gallery img {
         height: 250px;
@@ -316,6 +423,11 @@ main .main__about {
 }
 
 @media screen and (max-width: 1030px) {
+
+    .header__logo{
+        margin-bottom: 11px;
+    }
+
     .topnav a {
         display: none;
     }
@@ -354,15 +466,15 @@ main .main__about {
         text-align: left;
     }
 
-    main .main__welcome {
+    .main__welcome {
         padding: 50px 0 50px 0;
     }
 
-    main .main__welcome p {
+    .main__welcome p {
         font-size: 14px;
     }
 
-    main .main__welcome h1 {
+    .main__welcome h1 {
         font-size: 25px;
     }
 
@@ -370,7 +482,7 @@ main .main__about {
         max-width: 100%;
     }
 
-    .main__about {
+    .about {
         flex-direction: column;
     }
 
@@ -403,6 +515,7 @@ main .main__about {
     .client {
         height: 300px;
         width: 300px;
+        margin: auto;
     }
 
     .gallery img {
@@ -421,4 +534,14 @@ main .main__about {
     .line3 img:not(:first-child) {
         display: none;
     }
+
+    .form__inputs{
+        flex-direction: column;
+    }
+
+    .form__inputs input{
+        width: 100%;
+    }
+
+
 }
